# smoothing_app

./: .gitignore  AGENTS.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
assets/: base-styles.css  custom-styles.css  storage.db
docs/plans/: 2026-02-22-uv-modernization.md
interpolation/: martingale.py  utilfcts.py
