[project]
name = "smoothing-app"
version = "0.1.0"
description = "Visualizing and comparing smoothing/interpolation methods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.0.0,<4.0.0",
    "flask>=3.0.0",
    "numpy>=2.0.0",
    "scipy>=1.15.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.6.0",
    "pygam>=0.9.0",
]

[project.scripts]
serve = "app:main"
